fix: fixed Schedule's overflow-x

--- a/src/components/Schedule/Schedule.module.css
+++ b/src/components/Schedule/Schedule.module.css
@@ -82,6 +82,7 @@
 	flex-direction: column;
 	align-items: start;
 	gap: 0.5rem;
+	width: 60%;
 }
 
 .event-title {
@@ -110,7 +111,11 @@
 	bottom: -10rem;
 	left: -10rem;
 }
-
+@media only screen and (max-width: 1100px) {
+	.event-heading {
+		width: 100%;		
+	}
+}	
 @media only screen and (max-width: 600px) {
 	.schedule {
 		background-image: url(/SVGs/snowflake1.svg), url(/SVGs/snowflake2.svg), url(/SVGs/xGroup.svg);
@@ -133,7 +138,7 @@
 
 	.event-details,
 	.event-heading {
-		justify-content: center;
+		justify-content: center;		
 	}
 
 	.sun {
